Fix: Fisk Logo Distortion Issue

--- a/asset/scss/components/_header.scss
+++ b/asset/scss/components/_header.scss
@@ -37,7 +37,7 @@
     align-items: center;
     margin-top: 26px;
     img {
-      height: 42.4px;
+      height: auto;
       width: 93px;
     }
   }
